# samples

./: .gitignore  Makefile  pyproject.toml
notebooks/: Bandit GIFs.ipynb  Bayesian AB Test for Rates.ipynb  Estimating pi Using Monte Carlo.ipynb  Multi-Armed Bandits - Part1 - Epsilon-Greedy.ipynb  Multi-Armed Bandits Experiments.ipynb
samples/monte_carlo/: calculate_pi.py
samples/rl/: bandit.py  bandits_epsilon_greedy.py  optimistic_initial_values.py  thompson_sampling.py  ucb.py  utils.py
