[tool.poetry]
name = "samples"
version = "0.0.0"
description = "Sample Code"
authors = ["eminik"]

[tool.poetry.dependencies]
python = "~3.8"

ipykernel = "=5.4.2"
numpy = "=1.19.5"
matplotlib = "=3.3.3"
pandas = "=1.2.0"
scipy = "=1.6.0"
scikit-learn = "=0.24.0"
seaborn = "=0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "=3.8.4"
pytest = "^3.4"
