[tool.poetry]
name = "samples"
version = "0.0.0"
description = "Sample Code"
authors = ["eminik"]

[tool.poetry.dependencies]
python = "~3.8"

ipykernel = "=5.4.2"
numpy = "=1.19.5"
matplotlib = "=3.3.3"
pandas = "=1.2.0"
scipy = "=1.6.0"
scikit-learn = "=0.24.0"
seaborn = "=0.11.1"
sentence-transformers = "=0.4.1.2"
tensorflow = "=2.4.0"
tensorflow-estimator = "=2.4.0"
torch = "=1.7.1"
transformers = "=4.2.1"


[tool.poetry.dev-dependencies]
flake8 = "=3.8.4"
pytest = "^3.4"
